ParExp.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParExp
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsExp
import LexExp

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'      { PT _ (TS _ 1)  }
  '!='     { PT _ (TS _ 2)  }
  '%'      { PT _ (TS _ 3)  }
  '&&'     { PT _ (TS _ 4)  }
  '('      { PT _ (TS _ 5)  }
  ')'      { PT _ (TS _ 6)  }
  '*'      { PT _ (TS _ 7)  }
  '+'      { PT _ (TS _ 8)  }
  '++'     { PT _ (TS _ 9)  }
  ','      { PT _ (TS _ 10) }
  '-'      { PT _ (TS _ 11) }
  '--'     { PT _ (TS _ 12) }
  '/'      { PT _ (TS _ 13) }
  ';'      { PT _ (TS _ 14) }
  '<'      { PT _ (TS _ 15) }
  '<='     { PT _ (TS _ 16) }
  '='      { PT _ (TS _ 17) }
  '=='     { PT _ (TS _ 18) }
  '>'      { PT _ (TS _ 19) }
  '>='     { PT _ (TS _ 20) }
  'bool'   { PT _ (TS _ 21) }
  'else'   { PT _ (TS _ 22) }
  'false'  { PT _ (TS _ 23) }
  'global' { PT _ (TS _ 24) }
  'if'     { PT _ (TS _ 25) }
  'in'     { PT _ (TS _ 26) }
  'int'    { PT _ (TS _ 27) }
  'out'    { PT _ (TS _ 28) }
  'print'  { PT _ (TS _ 29) }
  'return' { PT _ (TS _ 30) }
  'string' { PT _ (TS _ 31) }
  'true'   { PT _ (TS _ 32) }
  'while'  { PT _ (TS _ 33) }
  '{'      { PT _ (TS _ 34) }
  '||'     { PT _ (TS _ 35) }
  '}'      { PT _ (TS _ 36) }
  L_Ident  { PT _ (TV _)    }
  L_integ  { PT _ (TI _)    }
  L_quoted { PT _ (TL _)    }

%%

Ident :: { (AbsExp.BNFC'Position, AbsExp.Ident) }
Ident  : L_Ident { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Ident (tokenText $1)) }

Integer :: { (AbsExp.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsExp.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsExp.BNFC'Position, AbsExp.Program) }
Program
  : ListGlobal ListTopDef { (fst $1, AbsExp.Program (fst $1) (snd $1) (snd $2)) }

Global :: { (AbsExp.BNFC'Position, AbsExp.Global) }
Global
  : 'global' Type Ident '=' Expr ';' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.GlobalDef (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3) (snd $5)) }

ListGlobal :: { (AbsExp.BNFC'Position, [AbsExp.Global]) }
ListGlobal
  : {- empty -} { (AbsExp.BNFC'NoPosition, []) }
  | Global ListGlobal { (fst $1, (:) (snd $1) (snd $2)) }

TopDef :: { (AbsExp.BNFC'Position, AbsExp.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, AbsExp.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (AbsExp.BNFC'Position, [AbsExp.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsExp.BNFC'Position, AbsExp.Arg) }
Arg
  : Type Ident { (fst $1, AbsExp.Arg (fst $1) (snd $1) (snd $2)) }
  | 'in' Type Ident { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.InArg (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }
  | 'out' Type Ident { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.OutArg (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }

ListArg :: { (AbsExp.BNFC'Position, [AbsExp.Arg]) }
ListArg
  : {- empty -} { (AbsExp.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsExp.BNFC'Position, AbsExp.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Block (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsExp.BNFC'Position, [AbsExp.Stmt]) }
ListStmt
  : {- empty -} { (AbsExp.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsExp.BNFC'Position, AbsExp.Stmt) }
Stmt
  : ';' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Empty (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, AbsExp.BStmt (fst $1) (snd $1)) }
  | Type ListItem ';' { (fst $1, AbsExp.Decl (fst $1) (snd $1) (snd $2)) }
  | Ident '=' Expr ';' { (fst $1, AbsExp.Ass (fst $1) (snd $1) (snd $3)) }
  | Ident '++' ';' { (fst $1, AbsExp.Incr (fst $1) (snd $1)) }
  | Ident '--' ';' { (fst $1, AbsExp.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Ret (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'if' '(' Expr ')' Stmt { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Cond (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.CondElse (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Stmt { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.While (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | Expr ';' { (fst $1, AbsExp.SExp (fst $1) (snd $1)) }
  | 'print' Expr ';' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Print (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2)) }

Item :: { (AbsExp.BNFC'Position, AbsExp.Item) }
Item
  : Ident { (fst $1, AbsExp.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsExp.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsExp.BNFC'Position, [AbsExp.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (AbsExp.BNFC'Position, AbsExp.Type) }
Type
  : 'int' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Int (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Str (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | 'bool' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Bool (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }

ListType :: { (AbsExp.BNFC'Position, [AbsExp.Type]) }
ListType
  : {- empty -} { (AbsExp.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr6
  : Ident { (fst $1, AbsExp.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsExp.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.ELitTrue (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.ELitFalse (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, AbsExp.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, AbsExp.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Neg (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Not (uncurry AbsExp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsExp.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsExp.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsExp.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsExp.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsExp.BNFC'Position, AbsExp.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, AbsExp.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (AbsExp.BNFC'Position, [AbsExp.Expr]) }
ListExpr
  : {- empty -} { (AbsExp.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsExp.BNFC'Position, AbsExp.AddOp) }
AddOp
  : '+' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Plus (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Minus (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsExp.BNFC'Position, AbsExp.MulOp) }
MulOp
  : '*' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Times (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Div (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.Mod (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsExp.BNFC'Position, AbsExp.RelOp) }
RelOp
  : '<' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.LTH (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.LE (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.GTH (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.GE (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.EQU (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsExp.BNFC'Position (tokenLineCol $1), AbsExp.NE (uncurry AbsExp.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsExp.Program
pProgram = fmap snd . pProgram_internal
}
