ParExp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParExp.y
-----------------------------------------------------------------------------

state 123 contains 1 shift/reduce conflicts.

rule 39 is unused
rule 40 is unused
rule 41 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListGlobal ListTopDef                   (4)
	Global -> 'global' Type Ident '=' Expr ';'         (5)
	ListGlobal ->                                      (6)
	ListGlobal -> Global ListGlobal                    (7)
	TopDef -> Type Ident '(' ListArg ')' Block         (8)
	ListTopDef -> TopDef                               (9)
	ListTopDef -> TopDef ListTopDef                    (10)
	Arg -> Type Ident                                  (11)
	Arg -> 'in' Type Ident                             (12)
	Arg -> 'out' Type Ident                            (13)
	ListArg ->                                         (14)
	ListArg -> Arg                                     (15)
	ListArg -> Arg ',' ListArg                         (16)
	Block -> '{' ListStmt '}'                          (17)
	ListStmt ->                                        (18)
	ListStmt -> Stmt ListStmt                          (19)
	Stmt -> ';'                                        (20)
	Stmt -> Block                                      (21)
	Stmt -> Type ListItem ';'                          (22)
	Stmt -> Ident '=' Expr ';'                         (23)
	Stmt -> Ident '++' ';'                             (24)
	Stmt -> Ident '--' ';'                             (25)
	Stmt -> 'return' Expr ';'                          (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> 'while' '(' Expr ')' Stmt                  (29)
	Stmt -> Expr ';'                                   (30)
	Stmt -> 'print' Expr ';'                           (31)
	Item -> Ident                                      (32)
	Item -> Ident '=' Expr                             (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	Type -> 'int'                                      (36)
	Type -> 'string'                                   (37)
	Type -> 'bool'                                     (38)
	ListType ->                                        (39)
	ListType -> Type                                   (40)
	ListType -> Type ',' ListType                      (41)
	Expr6 -> Ident                                     (42)
	Expr6 -> Integer                                   (43)
	Expr6 -> 'true'                                    (44)
	Expr6 -> 'false'                                   (45)
	Expr6 -> Ident '(' ListExpr ')'                    (46)
	Expr6 -> String                                    (47)
	Expr6 -> '(' Expr ')'                              (48)
	Expr5 -> '-' Expr6                                 (49)
	Expr5 -> '!' Expr6                                 (50)
	Expr5 -> Expr6                                     (51)
	Expr4 -> Expr4 MulOp Expr5                         (52)
	Expr4 -> Expr5                                     (53)
	Expr3 -> Expr3 AddOp Expr4                         (54)
	Expr3 -> Expr4                                     (55)
	Expr2 -> Expr2 RelOp Expr3                         (56)
	Expr2 -> Expr3                                     (57)
	Expr1 -> Expr2 '&&' Expr1                          (58)
	Expr1 -> Expr2                                     (59)
	Expr -> Expr1 '||' Expr                            (60)
	Expr -> Expr1                                      (61)
	ListExpr ->                                        (62)
	ListExpr -> Expr                                   (63)
	ListExpr -> Expr ',' ListExpr                      (64)
	AddOp -> '+'                                       (65)
	AddOp -> '-'                                       (66)
	MulOp -> '*'                                       (67)
	MulOp -> '/'                                       (68)
	MulOp -> '%'                                       (69)
	RelOp -> '<'                                       (70)
	RelOp -> '<='                                      (71)
	RelOp -> '>'                                       (72)
	RelOp -> '>='                                      (73)
	RelOp -> '=='                                      (74)
	RelOp -> '!='                                      (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'bool'         { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'global'       { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'in'           { PT _ (TS _ 26) }
	'int'          { PT _ (TS _ 27) }
	'out'          { PT _ (TS _ 28) }
	'print'        { PT _ (TS _ 29) }
	'return'       { PT _ (TS _ 30) }
	'string'       { PT _ (TS _ 31) }
	'true'         { PT _ (TS _ 32) }
	'while'        { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'||'           { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Global          rule  5
	ListGlobal      rules 6, 7
	TopDef          rule  8
	ListTopDef      rules 9, 10
	Arg             rules 11, 12, 13
	ListArg         rules 14, 15, 16
	Block           rule  17
	ListStmt        rules 18, 19
	Stmt            rules 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	Item            rules 32, 33
	ListItem        rules 34, 35
	Type            rules 36, 37, 38
	ListType        rules 39, 40, 41
	Expr6           rules 42, 43, 44, 45, 46, 47, 48
	Expr5           rules 49, 50, 51
	Expr4           rules 52, 53
	Expr3           rules 54, 55
	Expr2           rules 56, 57
	Expr1           rules 58, 59
	Expr            rules 60, 61
	ListExpr        rules 62, 63, 64
	AddOp           rules 65, 66
	MulOp           rules 67, 68, 69
	RelOp           rules 70, 71, 72, 73, 74, 75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'bool'         reduce using rule 6
	'global'       shift, and enter state 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6

	Program        goto state 3
	Global         goto state 4
	ListGlobal     goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListGlobal -> Global . ListGlobal                   (rule 7)

	'bool'         reduce using rule 6
	'global'       shift, and enter state 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6

	Global         goto state 4
	ListGlobal     goto state 14

State 5

	Program -> ListGlobal . ListTopDef                  (rule 4)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	TopDef         goto state 11
	ListTopDef     goto state 12
	Type           goto state 13

State 6

	Global -> 'global' . Type Ident '=' Expr ';'        (rule 5)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 7

State 7

	Global -> 'global' Type . Ident '=' Expr ';'        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 17

State 8

	Type -> 'bool' .                                    (rule 38)

	L_Ident        reduce using rule 38


State 9

	Type -> 'int' .                                     (rule 36)

	L_Ident        reduce using rule 36


State 10

	Type -> 'string' .                                  (rule 37)

	L_Ident        reduce using rule 37


State 11

	ListTopDef -> TopDef .                              (rule 9)
	ListTopDef -> TopDef . ListTopDef                   (rule 10)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	%eof           reduce using rule 9

	TopDef         goto state 11
	ListTopDef     goto state 16
	Type           goto state 13

State 12

	Program -> ListGlobal ListTopDef .                  (rule 4)

	%eof           reduce using rule 4


State 13

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 14

	ListGlobal -> Global ListGlobal .                   (rule 7)

	'bool'         reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7


State 15

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 8)

	'('            shift, and enter state 19


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 10)

	%eof           reduce using rule 10


State 17

	Global -> 'global' Type Ident . '=' Expr ';'        (rule 5)

	'='            shift, and enter state 18


State 18

	Global -> 'global' Type Ident '=' . Expr ';'        (rule 5)

	'!'            shift, and enter state 35
	'('            shift, and enter state 36
	'-'            shift, and enter state 37
	'false'        shift, and enter state 38
	'true'         shift, and enter state 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 40
	L_quoted       shift, and enter state 41

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 28
	Expr5          goto state 29
	Expr4          goto state 30
	Expr3          goto state 31
	Expr2          goto state 32
	Expr1          goto state 33
	Expr           goto state 34

State 19

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 8)

	')'            reduce using rule 14
	'bool'         shift, and enter state 8
	'in'           shift, and enter state 23
	'int'          shift, and enter state 9
	'out'          shift, and enter state 24
	'string'       shift, and enter state 10

	Arg            goto state 20
	ListArg        goto state 21
	Type           goto state 22

State 20

	ListArg -> Arg .                                    (rule 15)
	ListArg -> Arg . ',' ListArg                        (rule 16)

	')'            reduce using rule 15
	','            shift, and enter state 67


State 21

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 8)

	')'            shift, and enter state 66


State 22

	Arg -> Type . Ident                                 (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 65

State 23

	Arg -> 'in' . Type Ident                            (rule 12)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 64

State 24

	Arg -> 'out' . Type Ident                           (rule 13)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 63

State 25

	Expr6 -> Ident .                                    (rule 42)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 46)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	'('            shift, and enter state 62
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'||'           reduce using rule 42


State 26

	Expr6 -> Integer .                                  (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 27

	Expr6 -> String .                                   (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47


State 28

	Expr5 -> Expr6 .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'||'           reduce using rule 51


State 29

	Expr4 -> Expr5 .                                    (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'||'           reduce using rule 53


State 30

	Expr4 -> Expr4 . MulOp Expr5                        (rule 52)
	Expr3 -> Expr4 .                                    (rule 55)

	'!='           reduce using rule 55
	'%'            shift, and enter state 59
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'*'            shift, and enter state 60
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            shift, and enter state 61
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'||'           reduce using rule 55

	MulOp          goto state 58

State 31

	Expr3 -> Expr3 . AddOp Expr4                        (rule 54)
	Expr2 -> Expr3 .                                    (rule 57)

	'!='           reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'+'            shift, and enter state 56
	','            reduce using rule 57
	'-'            shift, and enter state 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'||'           reduce using rule 57

	AddOp          goto state 55

State 32

	Expr2 -> Expr2 . RelOp Expr3                        (rule 56)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 58)
	Expr1 -> Expr2 .                                    (rule 59)

	'!='           shift, and enter state 48
	'&&'           shift, and enter state 49
	')'            reduce using rule 59
	','            reduce using rule 59
	';'            reduce using rule 59
	'<'            shift, and enter state 50
	'<='           shift, and enter state 51
	'=='           shift, and enter state 52
	'>'            shift, and enter state 53
	'>='           shift, and enter state 54
	'||'           reduce using rule 59

	RelOp          goto state 47

State 33

	Expr -> Expr1 . '||' Expr                           (rule 60)
	Expr -> Expr1 .                                     (rule 61)

	')'            reduce using rule 61
	','            reduce using rule 61
	';'            reduce using rule 61
	'||'           shift, and enter state 46


State 34

	Global -> 'global' Type Ident '=' Expr . ';'        (rule 5)

	';'            shift, and enter state 45


State 35

	Expr5 -> '!' . Expr6                                (rule 50)

	'('            shift, and enter state 36
	'false'        shift, and enter state 38
	'true'         shift, and enter state 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 40
	L_quoted       shift, and enter state 41

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 44

State 36

	Expr6 -> '(' . Expr ')'                             (rule 48)

	'!'            shift, and enter state 35
	'('            shift, and enter state 36
	'-'            shift, and enter state 37
	'false'        shift, and enter state 38
	'true'         shift, and enter state 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 40
	L_quoted       shift, and enter state 41

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 28
	Expr5          goto state 29
	Expr4          goto state 30
	Expr3          goto state 31
	Expr2          goto state 32
	Expr1          goto state 33
	Expr           goto state 43

State 37

	Expr5 -> '-' . Expr6                                (rule 49)

	'('            shift, and enter state 36
	'false'        shift, and enter state 38
	'true'         shift, and enter state 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 40
	L_quoted       shift, and enter state 41

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 42

State 38

	Expr6 -> 'false' .                                  (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45

